<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Hardware_A22" Id="{a75a4c78-0ad0-47cf-a8d3-7cd700a3f212}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	robot3 : RobotA22;
	robot4 : RobotA22;
	
	benderA22Left : FoldingMachine;
	
	skidA22Left : SkidMagazine;
	skidA22Right : SkidMagazine;
	magazineA22Left : SkidMagazine;
	magazineA22Right : SkidMagazine;
	
	wrapperA22 : WrapMachine;
	overhead : STRING;
	
	horizontalDriveA22Left, horizontalDriveA22Right : ServoNC := (
		limitSensorDefaultState := TRUE);
		
	verticalDriveA22Left, verticalDriveA22Right : ClearLinkMC := (
		limitSensorDefaultState := TRUE, 
		homingDirectionOut := TRUE, //outwards (up)
		minPosition := (26*5 * 25.4),
		displacementPerRotation := 5,
		unitsPerPulse := 800); //800 counts = 1 rotation
		
	insertionA22Left : Insertion;
	insertionA22Right : Insertion;

	pistonA22Bottom : SimplePiston;
	
	(*
	each insertion suction array has 3 pads
	[1] - top/bottom
	[2] - corner
	[3] - side
	*)
	suctionA22TopLeft : ARRAY[1..3] OF SuctionPad;
	suctionA22TopRight : ARRAY[1..3] OF SuctionPad;
	suctionA22BottomLeft : ARRAY[1..3] OF SuctionPad; 
	suctionA22BottomRight : ARRAY[1..3] OF SuctionPad;
	
	suctionA22Bottom : ARRAY[1..2] OF SuctionPad;
END_VAR
VAR_GLOBAL //data arrays to be passed into material holder FBs - do not access directly
	skidHmiA22Left, skidHmiA22Right AT %M* : ARRAY[1...Cardboard.size-1] OF MaterialSlot;
	magazineHmiA22Left, magazineHmiA22Right AT %M* : ARRAY[1..CornerGuard.size-1] OF MaterialSlot;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>